<resources>
    <string name="app_name">Room ORM Sample</string>
    <string name="str_create_new_task">Create New Task</string>
    <string name="action_settings">Settings</string>
    <string name="str_subject">Subject</string>
    <string name="str_description">Description</string>
    <string name="str_todo">Todo or Not Done</string>
    <string name="str_done">Done</string>
    <string name="str_task_status">Task Status :</string>
    <string name="str_save">Save</string>
</resources>
